chat part fininshed
