# router/app.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	_ "OuterChat/docs"
+	"OuterChat/middleware"
 	"OuterChat/service"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -10,15 +11,21 @@ import (
 
 func Router() *gin.Engine {
 	r := gin.Default()
+	r.Use(middleware.CORS())
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/list", service.GetUserList)
 	r.POST("/user/add", service.CreateUser)
 	r.DELETE("/user/delete", service.DeleteUser)
 	r.PUT("/user/update", service.UpdateUser)
+	r.GET("/user/getUserByToken", service.GetUserByToken)
 	r.GET("/user/loginByName", service.LoginByName)
+	r.GET("user/getUser", service.GetUser)
 
 	r.GET("/user/sendMsg", service.SendMsg)
+	r.GET("/user/sendUserMsg", service.SendUserMsg)
+
+	r.GET("/user/getFriendList", service.GetFriendListById)
 	gin.SetMode(gin.DebugMode)
 	return r
 }
